# E_mart-sevice

./: compose.yml
Payment_Service/payment_service/: .env  Dockerfile  pyproject.toml
Payment_Service/payment_service/payment_service/: main.py
Payment_Service/payment_service/payment_service/database/: db.py
Payment_Service/payment_service/payment_service/model/: schema.py
Payment_Service/payment_service/payment_service/payment_kafka/: kafka_producer.py
Payment_Service/payment_service/payment_service/payment_routes/: rout.py
Payment_Service/payment_service/payment_service/paymentcrud/: crud.py
Payment_Service/payment_service/tests/: test_payment_service.py
Product_Service/Product_service/: Dockerfile
Product_Service/Product_service/product_service/: crud.py  crudimage.py  image_routes.py  kafka.py  kafka_consumer.py  main.py  product.proto  product_pb2.py  request.py  rout.py  scehma.py
inventory_service/inventory_service/: .env  Dockerfile  pyproject.toml
inventory_service/inventory_service/inventory_service/: crud.py  db.py  inventory.proto  inventory_pb2.py  kafka.py  kafka_product_consumers.py  main.py  rout.py  schema.py
order_service/: .env  Dockerfile  pyproject.toml
order_service/app/: crud.py  db.py  kafka_consumer.py  kafka_producer.py  models.py  router.py  settings.py
order_service/order_service/: crud.py  db.py  kafka_consumer.py  kafka_producer.py  main.py  models.py  order.proto  router.py  settings.py
